--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="icon" type="image/png" href="images/favicon.png" />
     <meta
       name="description"
       content="Blogr Landing Page Clone From Frontend Mentor By Wassim Itani"
     />
     <title>Blogr Landing Page</title>
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
   </head>
 
   <body>
@@ -290,6 +291,5 @@
         </div>
       </div>
     </footer>
-    <script src="main.js"></script>
   </body>
 </html>
